Full implementation of findById in JpaAdapter